fixed some spelling

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p>
                 The <strong><code>letter-spacing</code></strong> and <strong><code>word-spacing</code></strong> properties allow for the addition and the 
                 removal of whitespace between letters and words respectively. They are able to be used together to mess with both the whitespace between letters 
-                and the whitespace between words. If you do not use either of these then they are defaulted to <strong><code>letter-spacing: normal;</code></strong>.
+                and the whitespace between words. If you do not use either of these then they are defaulted to <strong><code>letter-spacing: normal;</code></strong> and <strong><code>word-spacing: normal;</code></strong> respectively.
                 They are both inheritable and can use pixels to change the amount of whitespace.
             </p>
             <div>
